fieldx/tests/uncompilable/nightly/unused_reader.stderr
error: method `read_tt` is never used
 --> tests/uncompilable/unused_reader.rs
  |
  | struct TT {
  |        -- method in this implementation
  |     #[fieldx(lazy, reader(attributes_fn(deny(dead_code))))]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/uncompilable/unused_reader.rs
  |
  |     #[fieldx(lazy, reader(attributes_fn(deny(dead_code))))]
  |                                              ^^^^^^^^^
